--- a/templates/currentteamback.html
+++ b/templates/currentteamback.html
@@ -5,87 +5,11 @@
     <title>Teams</title>
 
     <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <style>
-        .headTitle {
-            position: sticky;
-            top: 0;
-            z-index: 999;
+    <link rel="stylesheet" type="text/css" href="/static/currentTeam/back.css">
 
-            background-color: white;
-            width: 100%;
-            height: 10rem;
-        }
-
-        .headTitle button {
-            float: right;
-
-            margin-right: 2rem;
-            margin-top: 1rem;
-            padding: 0.5rem 1rem;
-
-            font-size: 1.5rem;
-            border: none;
-            border-radius: 0.5rem;
-            background-color: var(--fss);
-            cursor: pointer;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            margin-top: 2rem;
-        }
-
-        th,
-        td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        body {
-            padding: 30px;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 50px;
-        }
-
-        input[type="radio"] {
-            zoom: 1.5;
-            cursor: pointer;
-        }
-
-        @media only screen and (max-width: 1000px) {
-            table {
-                font-size: 23px;
-            }
-
-            th,
-            td {
-                padding: 6px;
-            }
-
-            h1 {
-                font-size: 75px;
-            }
-
-            input,
-            select {
-                zoom: 2;
-            }
-
-            button {
-                zoom: 1.5;
-            }
-        }
-    </style>
+    <script src="/static/currentTeam/back.js"></script>
 </head>
+
 
 <body>
     <div class="headTitle">
@@ -125,69 +49,8 @@
                 <td>{{ team.flag }}</td>
             </tr>
             {% endfor %}
-
         </table>
     </form>
-
-
-    <script>
-        function searchTable() {
-            var input = document.getElementById("searchInput");
-            var filter = input.value.toLowerCase();
-
-            var table = document.querySelector("table");
-            var rows = table.getElementsByTagName("tr");
-
-            for (var i = 0; i < rows.length; i++) {
-                index = document.getElementById("columnSelect").selectedIndex;
-                var nameColumn = rows[i].getElementsByTagName("td")[index + 1];
-
-                if (nameColumn) {
-                    var name = nameColumn.textContent || nameColumn.innerText;
-                    if (name.toLowerCase().indexOf(filter) > -1) {
-                        rows[i].style.display = "";
-                    } else {
-                        rows[i].style.display = "none";
-                    }
-                }
-            }
-        }
-
-        function update() {
-            var selectedTeam = document.querySelector('input[name="selectedTeam"]:checked');
-
-            var dataa = selectedTeam.parentElement.parentElement;
-
-            var number = dataa.children[1].innerText;
-            var name = dataa.children[2].innerText;
-            var uni = dataa.children[3].innerText;
-            var flag = dataa.children[4].innerText;
-
-            fetch('/api/currentteam', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    number: number,
-                    name: name,
-                    uni: uni,
-                    flag: flag
-                })
-            })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.message == 'success') {
-                        window.location.reload();
-                    } else {
-                        alert(data.message);
-                    }
-                })
-                .catch(error => {
-                    alert('Error: ' + error);
-                });
-        }
-    </script>
 </body>
 
 </html>
