--- a/templates/currentteamback.html
+++ b/templates/currentteamback.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Teams</title>
+    <title>Current Team - Back</title>
 
     <link rel="stylesheet" type="text/css" href="/static/style.css">
     <link rel="stylesheet" type="text/css" href="/static/currentTeam/back.css">
