--- a/templates/currentteamfront.html
+++ b/templates/currentteamfront.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-    <title>currentteamfront</title>
+    <title>Current Team - Front</title>
 
     <link rel="stylesheet" type="text/css" href="/static/style.css">
     <link rel="stylesheet" type="text/css" href="/static/currentTeam/front.css">
+
+    <script src="/static/currentTeam/front.js"></script>
 </head>
 
 <body>
