--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,11 @@
         <button class="sport-button" onclick="location.href='/currentteamback';">Current Team Backend</button>
         <button class="sport-button" onclick="location.href='/currentteamfront';">Current Team Frontend</button>
     </div>
+
+    <br>
+    <div class="zone">
+        <button class="sport-button" onclick="location.href='/bestrun';">Best Run</button>
+    </div>
 </body>
 
 </html>
