--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,8 @@
     --primary2: #D13B36;
     --primary3: #041E42;
 
+    --radius: 0.5rem;
+
     --black: #121212;
     --white: #fcfcfc;
     --verde-claro: #E8F4E0;
