Best Run fron done

--- a/templates/bestrun.html
+++ b/templates/bestrun.html
@@ -12,13 +12,18 @@
 
 <body>
     <div class="group">
-        <div class="flag"></div>
-        <div class="contrainer">
-            <div class="number">{{ team.number }}</div>
-            <div>
-                <div class="teamname">{{ team.name }}</div>
-                <div class="uni">{{ team.uni }}</div>
-            </div>
+        <h3>BEST RUN ELECTRIC</h3>
+        <div>
+            <h2>1:35:356</h2>
+            <div class="name">UPC de barcelona</div>
+        </div>
+    </div>
+
+    <div class="group">
+        <h3>BEST RUN COMBUSTION</h3>
+        <div>
+            <h2>1:33:567</h2>
+            <div class="name">Otra Uni</div>
         </div>
     </div>
 </body>
