--- a/static/currentTeam/front.css
+++ b/static/currentTeam/front.css
@@ -20,7 +20,7 @@ body {
 .flag {
     width: 30px;
     height: 25px;
-    background-image: url("static/flags/spain.png");
+    background-image: url("/static/flags/spain.png");
     background-size: cover;
 }
 
