--- a/static/bestRun/front.css
+++ b/static/bestRun/front.css
@@ -5,8 +5,6 @@ body {
     height: 100vh;
 
     overflow: hidden;
-
-    background-color: blueviolet;
 }
 
 h2 {
@@ -24,6 +22,7 @@ h3 {
     height: 100px;
     padding: 2rem;
     margin: 2rem;
+    margin-top: 0;
     border-radius: var(--radius);
 
     display: flex;
@@ -33,4 +32,23 @@ h3 {
     text-align: center;
 
     background-color: white;
+}
+
+.centered {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+p {
+    font-size: 2rem;
+    font-weight: 400;
+    margin-bottom: 0.5rem;
+
+    color: transparent;
+}
+
+span {
+    color: green;
 }
