--- a/templates/bestrun.html
+++ b/templates/bestrun.html
@@ -11,19 +11,26 @@
 </head>
 
 <body>
-    <div class="group">
-        <h3>BEST RUN ELECTRIC</h3>
-        <div>
-            <h2>1:35:356</h2>
-            <div class="name">UPC de barcelona</div>
+
+    <div class="centered" id="electric">
+        <p>New Best</p>
+        <div class="group">
+            <h3>BEST RUN ELECTRIC</h3>
+            <div>
+                <h2>1:35:356</h2>
+                <div class="name">UPC de barcelona</div>
+            </div>
         </div>
     </div>
 
-    <div class="group">
-        <h3>BEST RUN COMBUSTION</h3>
-        <div>
-            <h2>1:33:567</h2>
-            <div class="name">Otra Uni</div>
+    <div class="centered" id="combustion">
+        <p>New Best</p>
+        <div class="group">
+            <h3>BEST RUN COMBUSTION</h3>
+            <div>
+                <h2>1:33:567</h2>
+                <div class="name">Otra Uni</div>
+            </div>
         </div>
     </div>
 </body>
