--- a/templates/bestrun.html
+++ b/templates/bestrun.html
@@ -9,37 +9,46 @@
 </head>
 
 <body>
-
-    <div class="run">
-        <div class="icon"><img src="/static/icons/fuel.png" alt=""></div>
-        <p class="time">10:33:153</p>
-        <p class="number">65</p>
-        <div class="centered">
-            <p class="name">Málaga Racing Team</p>
-            <p class="uni">UPC de barcelona</p>
+    <div class="item" id="fuel">
+        <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
+        <div class="run">
+            <div class="icon"><img src="/static/icons/fuel.png" alt=""></div>
+            <p class="time">10:33:153</p>
+            <p class="number">65</p>
+            <div class="centered">
+                <p class="name">Málaga Racing Team</p>
+                <p class="uni">UPC de barcelona</p>
+            </div>
         </div>
     </div>
 
-    <div class="run">
-        <div class="icon"><img src="/static/icons/electric.png" alt=""></div>
-        <p class="time">10:33:153</p>
-        <p class="number">88</p>
-        <div class="centered">
-            <p class="name">UniBo Motorsport Electric</p>
-            <p class="uni">Alma Mater Studiorum - Università di Bologna</p>
+    <div class="item" id="electric">
+        <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
+        <div class="run">
+            <div class="icon"><img src="/static/icons/electric.png" alt=""></div>
+            <p class="time">10:33:153</p>
+            <p class="number">65</p>
+            <div class="centered">
+                <p class="name">Málaga Racing Team</p>
+                <p class="uni">UPC de barcelona</p>
+            </div>
         </div>
     </div>
 
-    <div class="run">
-        <div class="icon"><img src="/static/icons/hybrid.png" alt=""></div>
-        <p class="time">10:33:153</p>
-        <p class="number">228</p>
-        <div class="centered">
-            <p class="name">UCO Autosport</p>
-            <p class="uni">Universidad de Córdoba</p>
+    <div class="item" id="hybrid">
+        <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
+        <div class="run">
+            <div class="icon"><img src="/static/icons/hybrid.png" alt=""></div>
+            <p class="time">10:33:153</p>
+            <p class="number">65</p>
+            <div class="centered">
+                <p class="name">Málaga Racing Team</p>
+                <p class="uni">UPC de barcelona</p>
+            </div>
         </div>
     </div>
 
+    <script src="/static/bestRun/front.js"></script>
 </body>
 
 </html>
