--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
     --primary2: #D13B36;
     --primary3: #041E42;
 
-    --best-time: #8803E6;
+    --best-time: #aa54e7;
 
     --radius: 0.5rem;
 
