Not background color

--- a/static/bestRun/front.css
+++ b/static/bestRun/front.css
@@ -7,7 +7,7 @@ body {
 
     align-items: end;
     color: #fff;
-    background-color: aquamarine;
+    /* background-color: aquamarine;*/
 }
 
 .run {
