--- a/templates/bestrun.html
+++ b/templates/bestrun.html
@@ -4,8 +4,7 @@
 <head>
     <title>Best Run</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <link rel="stylesheet" type="text/css" href="/static/bestRun/front.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/bestrun.css">
 </head>
 
 <body>
@@ -36,9 +35,7 @@
     </div>
 
     <div class="item" id="hybrid">
-        <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
         <div class="run">
-            <div class="icon"><img src="/static/icons/hybrid.png" alt=""></div>
             <p class="time">10:33:153</p>
             <p class="number">65</p>
             <div class="centered">
@@ -48,7 +45,7 @@
         </div>
     </div>
 
-    <script src="/static/bestRun/front.js"></script>
+    <script src="/static/js/bestRun.js"></script>
 </body>
 
 </html>
