--- a/templates/bestrun.html
+++ b/templates/bestrun.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="item" id="hybrid">
+    <div class="item" id="last">
         <div class="run">
             <p class="time">10:33:153</p>
             <p class="number">65</p>
@@ -45,7 +45,8 @@
         </div>
     </div>
 
-    <script src="/static/js/bestRun.js"></script>
+    <script src="/static/js/bestrun.js"></script>
+    {% include 'config.html' %}
 </body>
 
 </html>
