Best Run Backend Working

--- a/templates/bestrun.html
+++ b/templates/bestrun.html
@@ -12,7 +12,7 @@
         <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
         <div class="run">
             <div class="icon"><img src="/static/icons/fuel.png" alt=""></div>
-            <p class="time">10:33:153</p>
+            <p class="timeL">10:33:153</p>
             <p class="number">65</p>
             <div class="centered">
                 <p class="name">Málaga Racing Team</p>
@@ -25,7 +25,7 @@
         <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
         <div class="run">
             <div class="icon"><img src="/static/icons/electric.png" alt=""></div>
-            <p class="time">10:33:153</p>
+            <p class="timeL">10:33:153</p>
             <p class="number">65</p>
             <div class="centered">
                 <p class="name">Málaga Racing Team</p>
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="item" id="last">
+    <div class="item hide" id="last">
         <div class="run">
             <p class="time">10:33:153</p>
             <p class="number">65</p>
