--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
         </label>
 
         <label class="radio">
-            <input id="autocros" type="radio" name="radio" />
-            <span class="name" onclick="change('autocros')">AUTOCROS</span>
+            <input id="autocross" type="radio" name="radio" />
+            <span class="name" onclick="change('autocross')">AUTOCROSS</span>
         </label>
     </div>
 
