--- a/templates/endurance.html
+++ b/templates/endurance.html
@@ -2,11 +2,9 @@
 <html>
 
 <head>
-    <title>F1</title>
+    <title>Endurance</title>
 
-    <link rel="stylesheet" href="/static/f1.css">
-
-    <script>id = "{{ id }}"</script>
+    <link rel="stylesheet" href="/static/css/endurance.css">
 </head>
 
 <body>
@@ -21,102 +19,26 @@
         </div>
 
         <div id="grid">
+            <!-- Example Driver -->
             <div class="driver">
-                <div class="state">DNF</div>
                 <div class="info">
                     <div class="base">
-                        <p>Infinity Racing</p>
+                        <p class="name">⚡ Valais Wallis Racing Team</p>
                         <div class="times">
-                            <p>B-108</p>
-                            <p>L-120</p>
-                            <p>D-8.66</p>
+                            <p><span style="color: rgb(86, 167, 86);">B-1:02.821</span></p>
+                            <p><span style="color: rgb(98, 98, 222);">L-1:02.861</span></p>
+
                         </div>
                     </div>
-                    <div class="number">33</div>
-                </div>
-            </div>            <div class="driver">
-                <div class="state">DNF</div>
-                <div class="info">
-                    <div class="base">
-                        <p>Infinity Racing</p>
-                        <div class="times">
-                            <p>B-108</p>
-                            <p>L-120</p>
-                            <p>D-8.66</p>
-                        </div>
+                    <div>
+                        <div class="number">353</div>
                     </div>
-                    <div class="number">33</div>
-                </div>
-            </div>            <div class="driver">
-                <div class="state">DNF</div>
-                <div class="info">
-                    <div class="base">
-                        <p>Infinity Racing</p>
-                        <div class="times">
-                            <p>B-108</p>
-                            <p>L-120</p>
-                            <p>D-8.66</p>
-                        </div>
-                    </div>
-                    <div class="number">33</div>
-                </div>
-            </div>            <div class="driver">
-                <div class="state">DNF</div>
-                <div class="info">
-                    <div class="base">
-                        <p>Infinity Racing</p>
-                        <div class="times">
-                            <p>B-108</p>
-                            <p>L-120</p>
-                            <p>D-8.66</p>
-                        </div>
-                    </div>
-                    <div class="number">33</div>
-                </div>
-            </div>            <div class="driver">
-                <div class="state">DNF</div>
-                <div class="info">
-                    <div class="base">
-                        <p>Infinity Racing</p>
-                        <div class="times">
-                            <p>B-108</p>
-                            <p>L-120</p>
-                            <p>D-8.66</p>
-                        </div>
-                    </div>
-                    <div class="number">33</div>
-                </div>
-            </div>            <div class="driver">
-                <div class="state">DNF</div>
-                <div class="info">
-                    <div class="base">
-                        <p>Infinity Racing</p>
-                        <div class="times">
-                            <p>B-108</p>
-                            <p>L-120</p>
-                            <p>D-8.66</p>
-                        </div>
-                    </div>
-                    <div class="number">333</div>
-                </div>
-            </div>            <div class="driver">
-                <div class="state">DNF</div>
-                <div class="info">
-                    <div class="base">
-                        <p>Infinity Racing</p>
-                        <div class="times">
-                            <p>B-108</p>
-                            <p>L-120</p>
-                            <p>D-8.66</p>
-                        </div>
-                    </div>
-                    <div class="number">33</div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="/static/f1.js"></script>
+    <script src="/static/js/endurance.js"></script>
 </body>
 
 </html>
