--- a/templates/team.html
+++ b/templates/team.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Current Team - Front</title>
+    <title>Current Team</title>
 
     <link rel="stylesheet" type="text/css" href="/static/css/team.css">
 
