--- a/templates/teams.html
+++ b/templates/teams.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Current Team - Back</title>
+    <title>Team Selector</title>
 
     <link rel="stylesheet" type="text/css" href="/static/css/teams.css">
 
