--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
 
         <p></p>
         <a href="/losmnHjnsytTgsbaH6hs8K9o/endurance"><button class="sport-button">Endurance</button></a>
+        <a href="/losmnHjnsytTgsbaH6hs8K9o/extra"><button class="sport-button">All Times</button></a>
     </div>
 
     <p></p>
