--- a/templates/extra.html
+++ b/templates/extra.html
@@ -12,7 +12,7 @@
         <div class="head">
             <div>
                 <h1 style="font-size: 3rem;">Live Results</h1>
-                <h2>Endurance</h2>
+                <h2 id="raceName">Endurance</h2>
             </div>
 
             <img src="https://www.formulastudent.es/wp-content/uploads/2020/02/cropped-FSS-blanco-rojo-2.png" alt="">
