--- a/templates/standings.html
+++ b/templates/standings.html
@@ -4,7 +4,7 @@
 <head>
     <title>Endurance Times</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/css/extra.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/standings.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
     </div>
 
     {% include 'config.html' %}
-    <script src="/static/js/extra.js"></script>
+    <script src="/static/js/standings.js"></script>
 </body>
 
 </html>
