--- a/templates/standings.html
+++ b/templates/standings.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Endurance Times</title>
+    <title>Standings</title>
 
     <link rel="stylesheet" type="text/css" href="/static/css/standings.css">
 </head>
