Change Icon to use

--- a/static/css/standings.css
+++ b/static/css/standings.css
@@ -1,9 +1,11 @@
 body {
     margin: 0;
+
+    overflow: hidden;
 }
 
 .main {
-    margin: 5rem;
+    margin: 10rem;
     padding: 3rem;
 
     color: white;
