--- a/templates/standings.html
+++ b/templates/standings.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="drivers">
-            <!-- Example Driver -->
+            <!-- Example Driver 
             <div class="driver">
                 <div class="position">1</div>
                 <img src="/static/flags/Spain.png" alt="">
@@ -39,7 +39,7 @@
                     <p class="lapHead class">CLASS</p>
                     <p>CV</p>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 
