--- a/static/css/endurance.css
+++ b/static/css/endurance.css
@@ -11,7 +11,6 @@
     padding: 0.4rem 1rem;
 }
 
-
 img {
     width: 90%;
 
@@ -40,10 +39,12 @@ img {
     padding: 0.5rem;
 }
 
-
 .name {
     font-size: 20px !important;
     font-weight: bold;
+
+    display: flex;
+    align-items: center;
 }
 
 .driver {
