--- a/templates/endurance.html
+++ b/templates/endurance.html
@@ -5,6 +5,7 @@
     <title>Endurance</title>
 
     <link rel="stylesheet" href="/static/css/endurance.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
             <div class="driver">
                 <div class="info">
                     <div class="base">
-                        <p class="name">⚡ Valais Wallis Racing Team</p>
+                        <p class="name"><img src="/static/icons/electric.png" class="iconoS"></img> Valais Wallis Racing Team</p>
                         <div class="times">
                             <p><span style="color: rgb(86, 167, 86);">B-1:02.821</span></p>
                             <p><span style="color: rgb(98, 98, 222);">L-1:02.861</span></p>
