--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,7 +3,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
 
     background-color: #f4f4f4;
@@ -97,4 +96,18 @@ body {
     left: -10px;
     border-bottom-right-radius: 300px;
     box-shadow: 3px 3px 0px 3px #f4f4f4;
+}
+
+
+@media only screen and (min-width: 1000px) {
+    body {
+        height: 100vh;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    body {
+        padding-top: 5rem;
+        zoom: 2;
+    }
 }
