Update of new times

--- a/templates/team.html
+++ b/templates/team.html
@@ -13,6 +13,7 @@
     <div class="group">
         <div class="flag"></div>
         <div class="contrainer">
+            <img style="height: 50px;" src="/static/cars/14.png" alt="">
             <div class="number" id="number">{{ team.number }}</div>
             <div id="text">
                 <div class="teamname" id="name">{{ team.name }}</div>
