Car pictures addded in current team

--- a/templates/team.html
+++ b/templates/team.html
@@ -13,7 +13,7 @@
     <div class="group">
         <div class="flag"></div>
         <div class="contrainer">
-            <img style="height: 50px;" src="/static/cars/14.png" alt="">
+            <img style="height: 50px;" src="/static/cars/{{team.number}}.png" alt="" id="carPhoto">
             <div class="number" id="number">{{ team.number }}</div>
             <div id="text">
                 <div class="teamname" id="name">{{ team.name }}</div>
