Update to work well on best run if there are no times

--- a/templates/bestrun.html
+++ b/templates/bestrun.html
@@ -12,11 +12,11 @@
         <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
         <div class="run">
             <div class="icon"><img src="/static/icons/fuel.png" alt=""></div>
-            <p class="timeL">10:33:153</p>
-            <p class="number">65</p>
+            <p class="timeL"></p>
+            <p class="number"></p>
             <div class="centered">
-                <p class="name">Málaga Racing Team</p>
-                <p class="uni">UPC de barcelona</p>
+                <p class="name"></p>
+                <p class="uni"></p>
             </div>
         </div>
     </div>
@@ -25,11 +25,11 @@
         <div class="time" style="width: 0px;"><img src="/static/icons/tiempo.png" alt=""></div>
         <div class="run">
             <div class="icon"><img src="/static/icons/electric.png" alt=""></div>
-            <p class="timeL">10:33:153</p>
-            <p class="number">65</p>
+            <p class="timeL"></p>
+            <p class="number"></p>
             <div class="centered">
-                <p class="name">Málaga Racing Team</p>
-                <p class="uni">UPC de barcelona</p>
+                <p class="name"></p>
+                <p class="uni"></p>
             </div>
         </div>
     </div>
